# baidu-pcs-rs-sdk

./: .gitignore  Cargo.toml  Cross.toml  MUSL_BUILD.md  README.md
.agents/skills/auth/: SKILL.md
.agents/skills/backup/: SKILL.md
.agents/skills/completion/: SKILL.md
.agents/skills/cp/: SKILL.md
.agents/skills/ls/: SKILL.md
.agents/skills/mkdir/: SKILL.md
.agents/skills/mv/: SKILL.md
.agents/skills/quota/: SKILL.md
.agents/skills/rm/: SKILL.md
.agents/skills/rx/: SKILL.md
.agents/skills/self/: SKILL.md
.agents/skills/tx/: SKILL.md
.agents/skills/version/: SKILL.md
.agents/skills/wget/: SKILL.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml
src/: auth.rs  cli.rs  config.rs  dns.rs  lib.rs  main.rs  sync.rs
src/baidu_pcs_sdk/: pcs.rs  pcs_device_auth_impl.rs  pcs_error.rs
